--- a/src/main/resources/templates/front/swift/entityListViewModel.mustache
+++ b/src/main/resources/templates/front/swift/entityListViewModel.mustache
@@ -36,21 +36,6 @@ errorMessage = mapError(error)
 isLoading = false
 }
 
-func fetchEntitiesUnSynced() -> [{{entity}}] {
-print("[fetchEntitiesUnSynced]")
-let descriptor = FetchDescriptor<{{entity}}>(
-predicate: #Predicate {
-$0.user?.username == username && $0.statusRaw != "SYNC" && $0.statusRaw != "SYNCING"
-},
-sortBy: [SortDescriptor(\.updatedAt, order: .reverse)]
-)
-do {
-return try modelContext.fetch(descriptor)
-} catch {
-errorMessage = mapError(error)
-return []
-}
-}
 
 func createEntity(
 {{#fields}}
@@ -119,7 +104,7 @@ print("deleteEntity \(item.name)")
 saveContext()
 }
 
-private func saveContext() {
+public func saveContext() {
 do {
 try modelContext.save()
 } catch {
@@ -127,52 +112,6 @@ errorMessage = mapError(error)
 }
 }
 
-func syncAllEntities() async {
-let unsynced = fetchEntitiesUnSynced()
 
-let deltas: [{{entity}}DeltaDto] = unsynced.map {
-{{entity}}DeltaDto(
-id: $0.remoteId ?? "null",
-{{#fields}}
-{{^isId}}
-	{{name}}: $0.{{name}},
-{{/isId}}
-{{/fields}}
-type: $0.statusRaw
-)
-}
 
-let useCase = Sync{{entity}}UseCase()
-do {
-try await useCase.execute(with: deltas)
-for item in unsynced {
-item.syncAt = Date()
-if(item.status != .sync) {
-    item.status = .syncing
-}
-}
-saveContext()
-await MainActor.run { self.showSuccessToast = true }
-} catch {
-await MainActor.run {
-self.errorMessage = mapError(error)
-self.showErrorToast = true
-}
-}
-}
-
-func pullThenSyncEntities() async {
-print("[pullThenSyncEntities]")
-let manager = {{entity}}PullService(modelContext: modelContext, user: user)
-do {
-try await manager.pullAndMerge{{entity}}s()
-await MainActor.run { _ = fetchEntitiesUnSynced() }
-await syncAllEntities()
-} catch {
-await MainActor.run {
-errorMessage = mapError(error)
-showErrorToast = true
-}
-}
-}
 }
