--- a/src/main/resources/templates/front/swift/entityTrashListViewModel.mustache
+++ b/src/main/resources/templates/front/swift/entityTrashListViewModel.mustache
@@ -3,56 +3,49 @@ import SwiftUI
 
 extension {{entity}}ListViewModel {
 
+    @MainActor
     func markDeleted(_ item: {{entity}}) {
-        if (
-            item.statusRaw == {{entity}}Status.delete.rawValue ||
-            item.remoteId == nil || item.deletedAt != nil
-        ) {
+        if item.statusRaw == {{entity}}Status.delete.rawValue || item.remoteId == nil {
             purge(item)
             return
         }
 
-        item.status = .delete
-        item.deletedAt = Date()
-        item.updatedAt = Date()
-        item.syncAt = nil
+        item.status     = .delete
+        item.deletedAt  = Date()
+        item.updatedAt  = Date()
+        item.syncAt     = nil
         saveContext()
 
-        entities.removeAll { $0.id == item.id }
+        fetchEntities()
     }
 
+    @MainActor
     func restore(_ item: {{entity}}) {
-        item.deletedAt = nil
-        item.id = UUID().uuidString
-        item.remoteId = item.id
-        item.reference = item.id
-        item.status = .create
-        item.updatedAt = Date()
+        item.deletedAt  = nil
+        item.status     = .create
+        item.updatedAt  = Date()
         saveContext()
 
-        entities.append(item)
+        fetchTrashed()
     }
 
+    @MainActor
     func purge(_ item: {{entity}}) {
         modelContext.delete(item)
         saveContext()
 
-        entities.removeAll { $0.id == item.id }
+        fetchTrashed()
     }
 
+    @MainActor
     func fetchTrashed() {
         isLoading = true
         let descriptor = FetchDescriptor<{{entity}}>(
-            predicate: #Predicate { item in
-                item.user?.username == username && item.deletedAt != nil
-            },
-            sortBy: [SortDescriptor(\.deletedAt, order: .reverse)]
+            predicate: #Predicate { $0.user?.username == username && $0.deletedAt != nil },
+            sortBy:    [SortDescriptor(\.deletedAt, order: .reverse)]
         )
-        do {
-            entities = try modelContext.fetch(descriptor)
-        } catch {
-            errorMessage = mapError(error)
-        }
+        do   { entities = try modelContext.fetch(descriptor) }
+        catch{ errorMessage = mapError(error)               }
         isLoading = false
     }
 }
